# ChangeLog for xfce-base/thunar
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  09 Nov 2008; Christoph Mende <angelos@gentoo.org> thunar-9999.ebuild:
  Remove USE=doc

  03 Dec 2007; Christoph Mende <angelos@gentoo.org> thunar-9999.ebuild:
  Sync with the main tree

  30 Oct 2007; Christoph Mende <angelos@gentoo.org> thunar-9999.ebuild:
  Removed librsvg dependency

  29 Sep 2007; Christoph Mende <angelos@gentoo.org> thunar-9999.ebuild:
  Cleanup

  29 Jun 2007; Christoph Mende <angelos@gentoo.org> thunar-9999.ebuild:
  Removed deprecated dependency on <dbus-1

  06 Jun 2007; Christoph Mende <angelos@gentoo.org> ChangeLog:
  Initial ChangeLog
