@@ -1,13 +1,15 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
+DIST Thunar-0.9.92.tar.bz2 6647836 RMD160 5b1e14232c16978b7a690069a7c350cdb7002041 SHA1 593abe4d4425fbc8faa6c7257f6f893d7ad92c77 SHA256 bd9930e8a6f3f6d41893e976d163d505a100e00431ed97059067de92cf7dc66f
+EBUILD thunar-0.9.92.ebuild 1736 RMD160 f474f38c0f63ce4e6de695881f552c72bd8e8301 SHA1 87ff3276d44cca608a75e413a45971192d90d59e SHA256 709102bd17d28a14d40060b7bbe5341b357c5a46f5bc1e20fd64d3fd3d5eedf3
 EBUILD thunar-9999.ebuild 1723 RMD160 1ff549f391ab9c827d2672a1eae1956007a26d30 SHA1 26c9f7018154c554ccfae9a7145be5e0ceac8441 SHA256 9198fb9192fe9d21518a4d558dda1a4ba296fb8c5d172798d7d0e6465d4046f9
-MISC ChangeLog 691 RMD160 4daa194a7dd61fd6fcf39f473de5bb8f2f81559d SHA1 5d6ecaa2f361b0839a5f33f0eae83f127e889ead SHA256 945f0c82ff91ab5425edea20482a352d945ebc7ee3b770d13426c6c1f74b40ac
+MISC ChangeLog 820 RMD160 cb1b3b507738eb5f09971558c851ff0bd46062c8 SHA1 9f9c88ccd122a114890bc821c6ee9616330c74ce SHA256 b4d46d152d5030e29dad3a53e655d4da5914e7c9b25a0fe6c4c06952948c8631
 MISC metadata.xml 234 RMD160 5cf371faf236f472c7d98a92d7103c5a96c4d95a SHA1 f028da2a6c812a70d5a6c159a450899a5c8f29a2 SHA256 acb3aa4d6a184bbefb0ae06cbb0ed0416ecd1b87d01cae543365cfc0e330d8cb
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.9 (GNU/Linux)
 
-iEYEARECAAYFAkkXXf4ACgkQKhnDs22gwa/rlgCfSkzS2qWicibCGR4IxSQRQpjk
-IqoAn0sLPQyfo54sApPLI9Vt2tPeFr0d
-=t1Le
+iEYEARECAAYFAkkdtikACgkQKhnDs22gwa94MACfaDnjXc2K1LoP6u6CUoIqiWyr
+BP8AoLdxwj4Km0qj2FLFNSd3hlxl7qGy
+=6IyB
 -----END PGP SIGNATURE-----
